samples/_failures_safe/1761532496_aae555_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42cc384d.c: In function ‘main’:
./samples/SAFE/__tmp_42cc384d.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
